# passtui

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
scripts/: install-linux.sh  install.sh
src/passtui/: __main__.py  app.py  app.tcss  security.py
src/passtui/models/: pass_store.py
src/passtui/screens/: auth.py  confirm_modal.py  gpg_export_modal.py  gpg_keygen_modal.py  input_modal.py
src/passtui/utils/: clipboard.py  input.py
src/passtui/widgets/: auth.py  auth.tcss  pass_data.py  pass_list.py  search.py
stubs/passpy/: __init__.pyi  git.pyi  store.pyi
tests/: test_app.py  test_security.py
tests/models/: test_pass_store.py
tests/screens/: test_gpg_export_modal.py  test_gpg_keygen_modal.py  test_input_modal.py
tests/utils/: test_clipboard.py  test_input.py
tests/widgets/: test_pass_data.py  test_pass_list.py  test_search.py
